# OmniWatch

./: .gitignore  README.md  RL_Simulação.py  aqui.sdf
RL_training/: RL_Treino.py  RL_gazebo_env.py  RL_gazebo_gym_test.py  RL_gazebo_test.py  RL_gazebo_treino.py
docs/: arquitetura.txt
install/: local_setup.sh  setup.bash  setup.sh
install/prius_gazebo_sim/share/ament_index/resource_index/parent_prefix_path/: prius_gazebo_sim
install/prius_gazebo_sim/share/prius_gazebo_sim/: package.ps1  package.sh  package.xml  package.zsh
install/prius_gazebo_sim/share/prius_gazebo_sim/cmake/: prius_gazebo_simConfig.cmake
install/prius_gazebo_sim/share/prius_gazebo_sim/launch/: spawn_prius.launch.py
install/ros2_ws/lib/ros2_ws/: sensor_manager
install/ros2_ws/share/ros2_ws/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/simple_car/lib/simple_car/: waypoint_follower
install/simple_car/share/ament_index/resource_index/parent_prefix_path/: simple_car
install/simple_car/share/simple_car/: local_setup.dsv  package.dsv  package.sh  package.zsh
install/simple_car/share/simple_car/cmake/: simple_carConfig.cmake
install/simple_car/share/simple_car/models/simple_car/: model.sdf
log/: latest_build
ros2_ws/: package.xml  setup.py  spade_publisher_agent.py  spade_ros_receiver_agent.py
ros2_ws/agents/: car_agent.py  car_agents_logs.txt  cityHall.py  clientAgent.py  requirements.txt  run_carAgents.py  run_ros.py  run_zone_manager.py  test_agent.py  ultra.txt  zone_manager.py  zone_manager_logs.txt
ros2_ws/agents/models/: predict_test.py
ros2_ws/agents/videos/missao/: car_agents.txt  zone_managers.txt
ros2_ws/agents/videos/missao_com_quarentena/: car_agents.txt  cityhall.txt  zone_managers.txt
ros2_ws/agents/videos/quarentena/: car_agents.txt  cityhall.txt  zone_managers.txt
ros2_ws/ros2_ws/: ros_car_node.py  sensor_manager.py
scripts/: start_server.sh
simple_car/: requirements.txt  terminal_log.txt
simple_car/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
simple_car/install/exemplo3/share/exemplo3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
simple_car/install/exemplo3/share/exemplo3/cmake/: exemplo3Config-version.cmake  exemplo3Config.cmake
simple_car/install/prius_gazebo_sim/share/prius_gazebo_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml
simple_car/install/simple_car/lib/simple_car/: car_controller.py  waypoint_follower
simple_car/install/simple_car/share/simple_car/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml
simple_car/log/: latest_build
simple_car/simple_car/: CMakeLists.txt  package.xml
simple_car/simple_car/launch/: aqui.sdf  model.config  model.sdf  run_cars.sh  spawn_car.launch.py  spawn_entity.sh
simple_car/simple_car/models/simple_car/: model.config  model.sdf
simple_car/simple_car/src/: car_controller.py  color_changer_plugin.cpp  waypoint_follower.py  waypoint_follower_rl.py  waypoint_follower_with_a_start.py
spade_agents/: requirements.txt
ultrasom/: Main.py  Ultrasom_final.ino  ultra.txt
(+24 files in other folders)
