<?xml version="1.0"?>
<package format="3">
  <name>simple_car</name>
  <version>0.0.1</version>
  <description>Veículo simples com 4 rodas usando ROS 2 e Gazebo</description>
  <maintainer email="1200799@isep.ipp.pt">Rafael Branco</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_dev</depend>
  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
